	  format-date(), format-time() and format-date-time().

	Gobo Eiffel XML Library:

	* Re-implemented XPath fn:collection() for file URIs (incompatibly,
	  but as the previous implementation was not documented, it
	  almost certainly is not used). Wrote documentation.
	* Added additional XSLT system-properties, and the ability to
	  register additional system properties. Documented this.

Version 3.7 - 5 November 2007

	gec:

	* Can generate console and Windows applications.
	* Implemented once manifest strings.
	* Report CAT-call errors and call-on-void-target errors at run-time.
	* Support the Ace/Xace/ECF 'trace' option.
	* The Boehm GC can be plugged using the --gc command-line option.
	* Improved the back-end C compiler config file.
	* Improved interoperability with ISE's compiler.
	* Support 'external "C++"' routines.
	* Implemented feature `deep_twin'.
	* Added support for lcc-win32 and MinGW as back-end C compilers.

	gelint:

	* Fixed bug when determining the type of a call to a Tuple label 
	  when appearing in a generic class.
	* Added support for some incrementality when used within the same session.

	Gobo Eiffel Argument Library:

	* Added the possibility to specify a maximum number of options.
	* Added the possibility to make option arguments optional for options
	  that only have a long form.
	* The contracts now certify that the setup of arguments are 
	  unambiguous.

	Gobo Eiffel Kernel Library:

	* Removed possible CAT-call when using KL_EQUALITY_TESTER. It does not
	  use `is_equal' directly, but a protected version of it which is preceded
	  by a call to `same_type'.

	Gobo Eiffel XML Library:

	* Made the XSLT serializer a reusable component for any XML programs.
	* Added an example of using the XSLT serializer.
	* Added documentation on XML serializers, including the reusable
	  XSLT serializer.

Version 3.6 - 14 June 2007

	gec:

	* Implemented inline agents.

	Gobo Eiffel String Library:
