@@ -51,11 +51,7 @@ feature -- Access
 	item_type: XM_XPATH_ITEM_TYPE is
 			-- Determine the data type of the expression, if possible
 		do
-			Result := common_super_type (target_type, base_expression.item_type)
-			if Result /= Void then
-				-- Bug in SE 1.0 and 1.1: Make sure that
-				-- that `Result' is not optimized away.
-			end
+			Result := target_type
 		end
 
 	error_code: STRING
